[package]
name = "kurtosis-rust-example"
edition = "2018"
version = "1.10.5"

[[bin]]
name = "testsuite"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
smallest-uint = "0.1.1" # TODO DEBUGGING
kurtosis-rust-lib = "1.14.1"
log = "0.4"
rand = "0.7.0"  # Needs to match the version used by ed25519-dalek, which (as of 2021-02-25) doesn't use the latest 'rand' version
reqwest = { version = "0.11.0", features = ["blocking"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
simplelog = "0.9.0"
# Commented out because it depends on 'hidapi' to support Ledger hardware wallets, and hidapi
# in turn depends on 'linux-headers-$(uname -r)' which don't work on Docker Mac
# See: https://github.com/docker/for-mac/issues/5295
# solana-client = "1.5.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.4.0"
